--- a/Laboratoare/Laborator_05/Aplicatia_01/Aplicatia_01.vcxproj.filters
+++ b/Laboratoare/Laborator_05/Aplicatia_01/Aplicatia_01.vcxproj.filters
@@ -23,5 +23,8 @@
     <Text Include="..\..\..\..\..\..\..\..\Downloads\Filme.txt">
       <Filter>Source Files</Filter>
     </Text>
+    <Text Include="Filme.txt">
+      <Filter>Resource Files</Filter>
+    </Text>
   </ItemGroup>
 </Project>
